--- a/book.toml
+++ b/book.toml
@@ -1,6 +1,10 @@
 [book]
+title = "UX Charts"
 authors = ["Victor Dudochkin"]
 language = "en"
 multilingual = false
 src = "src"
-title = "mdbook-testing"
+
+[output.html]
+theme = "src/theme"
+site-url = "/ux-charts/"
